Geometry Nodes repeatable crash when setting position #94162

Closed
opened 2021-12-16 18:01:16 +01:00 by Orestis Konstantinidis · 9 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557

Short description of error
Hello,
I'm getting a repeatable crash when trying to set position for debug purposes. I'm getting a vector out of a group node and try to use "Set Position" to visualize the vector in the viewport.
Unfortunately I wasn't able to simplify the group more, if I do that, after reloading blender it doesn't crash any more, even though the resulting set position still produces the wrong result.

Exact steps for others to reproduce the error
set position crash2.blend
image.png
In the attached scene, please connect the Vector output of the Donut Field group node with the Position input of the "Set Position" node, and blender will crash.

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` **Short description of error** Hello, I'm getting a repeatable crash when trying to set position for debug purposes. I'm getting a vector out of a group node and try to use "Set Position" to visualize the vector in the viewport. Unfortunately I wasn't able to simplify the group more, if I do that, after reloading blender it doesn't crash any more, even though the resulting set position still produces the wrong result. **Exact steps for others to reproduce the error** [set position crash2.blend](https://archive.blender.org/developer/F12754063/set_position_crash2.blend) ![image.png](https://archive.blender.org/developer/F12754064/image.png) In the attached scene, please connect the Vector output of the Donut Field group node with the Position input of the "Set Position" node, and blender will crash.

Added subscriber: @OrestisKonstantinidis

Added subscriber: @OrestisKonstantinidis

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm this.

Thanks for the report, I can confirm this.

Added subscriber: @djcampbell1914

Added subscriber: @djcampbell1914

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

The problem is that the Donut Field node group has two Group Output nodes. Only one is supported currently. It shouldn't crash though.

The problem is that the Donut Field node group has two Group Output nodes. Only one is supported currently. It shouldn't crash though.
Jacques Lucke self-assigned this 2021-12-17 13:56:21 +01:00

This issue was referenced by ba4b7b4319

This issue was referenced by ba4b7b43195c17436beaba95956087be4fb746a9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94162
There is no content yet.